--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,6 +1,20 @@
 
 <h1> <%= @place["name"] %> </h1>
 
+<ul>
+  <% for entry in @entries%>
+  <li>
+      <%= entry["title"] %>
+      <%= entry["description"]%>
+      <%= entry["posted_on"]%>
+      </li>
+  <% end%>
+</ul>
+
+<p>
+  <a href="">New Post</a>
+</p>
+
 <p>
 <a href = "/places">Back to all places</a>
 </p>
