--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,12 +1,12 @@
 <h1>New Post</h1>
 
-<form action="/places" method="post">
+<form action="/entries" method="post">
   <p>
-    <label for="title">Name</label>
+    <label for="title">Title of activity</label>
     <input type="text" name="title" id="title">
     <label for="description">Description</label>
     <input type="text" name="description" id="description">
-    <label for="posted_on">Description</label>
+    <label for="posted_on">Date Posted</label>
     <input type="date" name="posted_on" id="posted_on">
   </p>
 
