--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -7,3 +7,7 @@
   </p>
   <button>Submit</button>
 </form>
+
+<p>
+  <a href="/entries/new?place_id=<%= @place.id %>">New entry for <%= @place.name %></a>
+</p>
