--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Post</h1>
+<h1>New Post for <%= @place["name"] %></h1>
 
 <form action="/entries" method="post">
   <p>
@@ -11,7 +11,6 @@
   </p>
 
 <p>
-    <label for="place_id">Place</label>
     <input type="hidden" name="place_id" id="place_id" 
     value="<%= params["place_id"]%>">
   </p>
